@@ -17,17 +17,26 @@
 
 package org.apache.ignite.internal.schema.marshaller;
 
-import java.math.BigDecimal;
-import java.math.BigInteger;
-import java.util.Arrays;
-import java.util.BitSet;
-import java.util.EnumSet;
-import java.util.List;
-import java.util.Objects;
-import java.util.Random;
-import java.util.UUID;
-import java.util.stream.Stream;
-import javax.annotation.processing.Generated;
+import static org.apache.ignite.internal.schema.NativeTypes.BYTES;
+import static org.apache.ignite.internal.schema.NativeTypes.DATE;
+import static org.apache.ignite.internal.schema.NativeTypes.DOUBLE;
+import static org.apache.ignite.internal.schema.NativeTypes.FLOAT;
+import static org.apache.ignite.internal.schema.NativeTypes.INT16;
+import static org.apache.ignite.internal.schema.NativeTypes.INT32;
+import static org.apache.ignite.internal.schema.NativeTypes.INT64;
+import static org.apache.ignite.internal.schema.NativeTypes.INT8;
+import static org.apache.ignite.internal.schema.NativeTypes.STRING;
+import static org.apache.ignite.internal.schema.NativeTypes.UUID;
+import static org.apache.ignite.internal.schema.NativeTypes.datetime;
+import static org.apache.ignite.internal.schema.NativeTypes.time;
+import static org.apache.ignite.internal.schema.NativeTypes.timestamp;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.DynamicContainer.dynamicContainer;
+import static org.junit.jupiter.api.DynamicTest.dynamicTest;
+
 import com.facebook.presto.bytecode.Access;
 import com.facebook.presto.bytecode.BytecodeBlock;
 import com.facebook.presto.bytecode.ClassDefinition;
@@ -37,15 +46,25 @@ import com.facebook.presto.bytecode.MethodDefinition;
 import com.facebook.presto.bytecode.ParameterizedType;
 import com.facebook.presto.bytecode.Variable;
 import com.facebook.presto.bytecode.expression.BytecodeExpressions;
+import java.util.EnumSet;
+import java.util.List;
+import java.util.Objects;
+import java.util.Random;
+import java.util.stream.Stream;
+import javax.annotation.processing.Generated;
+import org.apache.ignite.internal.schema.BinaryRow;
 import org.apache.ignite.internal.schema.Column;
 import org.apache.ignite.internal.schema.NativeType;
 import org.apache.ignite.internal.schema.NativeTypeSpec;
 import org.apache.ignite.internal.schema.NativeTypes;
 import org.apache.ignite.internal.schema.SchemaDescriptor;
-import org.apache.ignite.internal.schema.TestUtils;
+import org.apache.ignite.internal.schema.SchemaTestUtils;
 import org.apache.ignite.internal.schema.marshaller.asm.AsmSerializerGenerator;
 import org.apache.ignite.internal.schema.marshaller.reflection.JavaSerializerFactory;
-import org.apache.ignite.internal.testframework.IgniteTestUtils;
+import org.apache.ignite.internal.schema.row.Row;
+import org.apache.ignite.internal.schema.testobjects.TestObjectWithAllTypes;
+import org.apache.ignite.internal.schema.testobjects.TestObjectWithNoDefaultConstructor;
+import org.apache.ignite.internal.schema.testobjects.TestObjectWithPrivateConstructor;
 import org.apache.ignite.internal.util.ObjectFactory;
 import org.apache.ignite.lang.IgniteInternalException;
 import org.junit.jupiter.api.BeforeEach;
@@ -54,41 +73,24 @@ import org.junit.jupiter.api.TestFactory;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 
-import static org.apache.ignite.internal.schema.NativeTypes.BYTES;
-import static org.apache.ignite.internal.schema.NativeTypes.DOUBLE;
-import static org.apache.ignite.internal.schema.NativeTypes.FLOAT;
-import static org.apache.ignite.internal.schema.NativeTypes.INT16;
-import static org.apache.ignite.internal.schema.NativeTypes.INT32;
-import static org.apache.ignite.internal.schema.NativeTypes.INT64;
-import static org.apache.ignite.internal.schema.NativeTypes.INT8;
-import static org.apache.ignite.internal.schema.NativeTypes.STRING;
-import static org.apache.ignite.internal.schema.NativeTypes.UUID;
-import static org.junit.jupiter.api.Assertions.assertArrayEquals;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.junit.jupiter.api.DynamicContainer.dynamicContainer;
-import static org.junit.jupiter.api.DynamicTest.dynamicTest;
-
 /**
  * Serializer test.
  */
+//TODO: IGNITE-15888 drop
+@Deprecated(forRemoval = true)
 public class JavaSerializerTest {
     /**
-     * @return List of serializers for test.
+     * Get list of serializers for test.
      */
     private static List<SerializerFactory> serializerFactoryProvider() {
-        return Arrays.asList(
-            new JavaSerializerFactory(),
-            new AsmSerializerGenerator()
-        );
+        return List.of(new JavaSerializerFactory(), new AsmSerializerGenerator());
     }
 
     /** Random. */
     private Random rnd;
 
     /**
-     *
+     * Init random and print seed before each test.
      */
     @BeforeEach
     public void initRandom() {
@@ -100,79 +102,85 @@ public class JavaSerializerTest {
     }
 
     /**
-     *
+     * TestBasicTypes.
+     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
      */
     @TestFactory
     public Stream<DynamicNode> testBasicTypes() {
-        NativeType[] types = new NativeType[] {INT8, INT16, INT32, INT64, FLOAT, DOUBLE, UUID, STRING, BYTES,
-            NativeTypes.bitmaskOf(5), NativeTypes.numberOf(42), NativeTypes.decimalOf(12, 3)};
+        NativeType[] types = new NativeType[]{INT8, INT16, INT32, INT64, FLOAT, DOUBLE, UUID, STRING, BYTES,
+                NativeTypes.bitmaskOf(5), NativeTypes.numberOf(42), NativeTypes.decimalOf(12, 3)};
 
         return serializerFactoryProvider().stream().map(factory ->
-            dynamicContainer(
-                factory.getClass().getSimpleName(),
-                Stream.concat(
-                    // Test pure types.
-                    Stream.of(types).map(type ->
-                        dynamicTest("testBasicTypes(" + type.spec().name() + ')', () -> checkBasicType(factory, type, type))
-                    ),
+                dynamicContainer(
+                        factory.getClass().getSimpleName(),
+                        Stream.concat(
+                                // Test pure types.
+                                Stream.of(types).map(type ->
+                                        dynamicTest("testBasicTypes(" + type.spec().name() + ')', () -> checkBasicType(factory, type, type))
+                                ),
 
-                    // Test pairs of mixed types.
-                    Stream.of(
-                        dynamicTest("testMixTypes 1", () -> checkBasicType(factory, INT64, INT32)),
-                        dynamicTest("testMixTypes 1", () -> checkBasicType(factory, FLOAT, DOUBLE)),
-                        dynamicTest("testMixTypes 1", () -> checkBasicType(factory, INT32, BYTES)),
-                        dynamicTest("testMixTypes 1", () -> checkBasicType(factory, STRING, INT64)),
-                        dynamicTest("testMixTypes 1", () -> checkBasicType(factory, NativeTypes.bitmaskOf(9), BYTES)),
-                        dynamicTest("testMixTypes 1", () -> checkBasicType(factory, NativeTypes.numberOf(12), BYTES)),
-                        dynamicTest("testMixTypes 1", () -> checkBasicType(factory, NativeTypes.decimalOf(12, 3), BYTES))
-                    )
-                )
-            ));
+                                // Test pairs of mixed types.
+                                Stream.of(
+                                        dynamicTest("testMixTypes 1", () -> checkBasicType(factory, INT64, INT32)),
+                                        dynamicTest("testMixTypes 1", () -> checkBasicType(factory, FLOAT, DOUBLE)),
+                                        dynamicTest("testMixTypes 1", () -> checkBasicType(factory, INT32, BYTES)),
+                                        dynamicTest("testMixTypes 1", () -> checkBasicType(factory, STRING, INT64)),
+                                        dynamicTest("testMixTypes 1", () -> checkBasicType(factory, NativeTypes.bitmaskOf(9), BYTES)),
+                                        dynamicTest("testMixTypes 1", () -> checkBasicType(factory, NativeTypes.numberOf(12), BYTES)),
+                                        dynamicTest("testMixTypes 1", () -> checkBasicType(factory, NativeTypes.decimalOf(12, 3), BYTES))
+                                )
+                        )
+                ));
     }
 
     /**
-     * @throws SerializationException If serialization failed.
+     * ComplexType.
+     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
+     *
+     * @throws MarshallerException If serialization failed.
      */
     @ParameterizedTest
     @MethodSource("serializerFactoryProvider")
-    public void complexType(SerializerFactory factory) throws SerializationException {
-        Column[] cols = new Column[] {
-            new Column("pByteCol", INT8, false),
-            new Column("pShortCol", INT16, false),
-            new Column("pIntCol", INT32, false),
-            new Column("pLongCol", INT64, false),
-            new Column("pFloatCol", FLOAT, false),
-            new Column("pDoubleCol", DOUBLE, false),
-
-            new Column("byteCol", INT8, true),
-            new Column("shortCol", INT16, true),
-            new Column("intCol", INT32, true),
-            new Column("longCol", INT64, true),
-            new Column("nullLongCol", INT64, true),
-            new Column("floatCol", FLOAT, true),
-            new Column("doubleCol", DOUBLE, true),
-
-            new Column("uuidCol", UUID, true),
-            new Column("bitmaskCol", NativeTypes.bitmaskOf(42), true),
-            new Column("stringCol", STRING, true),
-            new Column("nullBytesCol", BYTES, true),
-            new Column("bytesCol", BYTES, true),
-            new Column("numberCol", NativeTypes.numberOf(12), true),
-            new Column("decimalCol", NativeTypes.decimalOf(19, 3), true),
+    public void complexType(SerializerFactory factory) throws MarshallerException {
+        Column[] cols = new Column[]{
+                new Column("primitiveByteCol", INT8, false),
+                new Column("primitiveShortCol", INT16, false),
+                new Column("primitiveIntCol", INT32, false),
+                new Column("primitiveLongCol", INT64, false),
+                new Column("primitiveFloatCol", FLOAT, false),
+                new Column("primitiveDoubleCol", DOUBLE, false),
+                new Column("byteCol", INT8, true),
+                new Column("shortCol", INT16, true),
+                new Column("intCol", INT32, true),
+                new Column("longCol", INT64, true),
+                new Column("nullLongCol", INT64, true),
+                new Column("floatCol", FLOAT, true),
+                new Column("doubleCol", DOUBLE, true),
+        
+                new Column("dateCol", DATE, false),
+                new Column("timeCol", time(), false),
+                new Column("dateTimeCol", datetime(), false),
+                new Column("timestampCol", timestamp(), false),
+        
+                new Column("uuidCol", UUID, true),
+                new Column("bitmaskCol", NativeTypes.bitmaskOf(42), true),
+                new Column("stringCol", STRING, true),
+                new Column("nullBytesCol", BYTES, true),
+                new Column("bytesCol", BYTES, true),
+                new Column("numberCol", NativeTypes.numberOf(12), true),
+                new Column("decimalCol", NativeTypes.decimalOf(19, 3), true),
         };
 
         SchemaDescriptor schema = new SchemaDescriptor(1, cols, cols);
 
-        final Object key = TestObject.randomObject(rnd);
-        final Object val = TestObject.randomObject(rnd);
-
+        final Object key = TestObjectWithAllTypes.randomObject(rnd);
+        final Object val = TestObjectWithAllTypes.randomObject(rnd);
         Serializer serializer = factory.create(schema, key.getClass(), val.getClass());
 
-        byte[] bytes = serializer.serialize(key, val);
+        BinaryRow row = serializer.serialize(key, val);
 
-        // Try different order.
-        Object restoredVal = serializer.deserializeValue(bytes);
-        Object restoredKey = serializer.deserializeKey(bytes);
+        Object restoredVal = serializer.deserializeValue(new Row(schema, row));
+        Object restoredKey = serializer.deserializeKey(new Row(schema, row));
 
         assertTrue(key.getClass().isInstance(restoredKey));
         assertTrue(val.getClass().isInstance(restoredVal));
@@ -182,63 +190,65 @@ public class JavaSerializerTest {
     }
 
     /**
-     *
+     * ClassWithWrongFieldType.
+     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
      */
     @ParameterizedTest
     @MethodSource("serializerFactoryProvider")
     public void classWithWrongFieldType(SerializerFactory factory) {
-        Column[] cols = new Column[] {
-            new Column("bitmaskCol", NativeTypes.bitmaskOf(42), true),
-            new Column("shortCol", UUID, true)
+        Column[] cols = new Column[]{
+                new Column("bitmaskCol", NativeTypes.bitmaskOf(42), true),
+                new Column("shortCol", UUID, true)
         };
 
         SchemaDescriptor schema = new SchemaDescriptor(1, cols, cols);
 
-        final Object key = TestObject.randomObject(rnd);
-        final Object val = TestObject.randomObject(rnd);
-
+        final Object key = TestObjectWithAllTypes.randomObject(rnd);
+        final Object val = TestObjectWithAllTypes.randomObject(rnd);
         Serializer serializer = factory.create(schema, key.getClass(), val.getClass());
 
         assertThrows(
-            SerializationException.class,
-            () -> serializer.serialize(key, val),
-            "Failed to write field [name=shortCol]"
+                MarshallerException.class,
+                () -> serializer.serialize(key, val),
+                "Failed to write field [name=shortCol]"
         );
     }
 
     /**
-     *
+     * ClassWithIncorrectBitmaskSize.
+     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
      */
     @ParameterizedTest
     @MethodSource("serializerFactoryProvider")
     public void classWithIncorrectBitmaskSize(SerializerFactory factory) {
-        Column[] cols = new Column[] {
-            new Column("pLongCol", INT64, false),
-            new Column("bitmaskCol", NativeTypes.bitmaskOf(9), true),
+        Column[] cols = new Column[]{
+                new Column("primitiveLongCol", INT64, false),
+                new Column("bitmaskCol", NativeTypes.bitmaskOf(9), true),
         };
 
         SchemaDescriptor schema = new SchemaDescriptor(1, cols, cols);
 
-        final Object key = TestObject.randomObject(rnd);
-        final Object val = TestObject.randomObject(rnd);
-
+        final Object key = TestObjectWithAllTypes.randomObject(rnd);
+        final Object val = TestObjectWithAllTypes.randomObject(rnd);
         Serializer serializer = factory.create(schema, key.getClass(), val.getClass());
 
         assertThrows(
-            SerializationException.class,
-            () -> serializer.serialize(key, val),
-            "Failed to write field [name=bitmaskCol]"
+                MarshallerException.class,
+                () -> serializer.serialize(key, val),
+                "Failed to write field [name=bitmaskCol]"
         );
     }
 
     /**
-     *
+     * ClassWithPrivateConstructor.
+     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
      */
     @ParameterizedTest
     @MethodSource("serializerFactoryProvider")
-    public void classWithPrivateConstructor(SerializerFactory factory) throws SerializationException {
-        Column[] cols = new Column[] {
-            new Column("pLongCol", INT64, false),
+    public void classWithPrivateConstructor(SerializerFactory factory) throws MarshallerException {
+        Column[] cols = new Column[]{
+                new Column("primLongCol", INT64, false),
+                new Column("primIntCol", INT32, false)
         };
 
         SchemaDescriptor schema = new SchemaDescriptor(1, cols, cols);
@@ -248,10 +258,10 @@ public class JavaSerializerTest {
 
         Serializer serializer = factory.create(schema, key.getClass(), val.getClass());
 
-        byte[] bytes = serializer.serialize(key, val);
+        BinaryRow row = serializer.serialize(key, val);
 
-        Object key1 = serializer.deserializeKey(bytes);
-        Object val1 = serializer.deserializeValue(bytes);
+        Object key1 = serializer.deserializeKey(new Row(schema, row));
+        Object val1 = serializer.deserializeValue(new Row(schema, row));
 
         assertTrue(key.getClass().isInstance(key1));
         assertTrue(val.getClass().isInstance(val1));
@@ -261,31 +271,34 @@ public class JavaSerializerTest {
     }
 
     /**
-     *
+     * ClassWithNoDefaultConstructor.
+     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
      */
     @ParameterizedTest
     @MethodSource("serializerFactoryProvider")
     public void classWithNoDefaultConstructor(SerializerFactory factory) {
-        Column[] cols = new Column[] {
-            new Column("pLongCol", INT64, false),
+        Column[] cols = new Column[]{
+                new Column("primLongCol", INT64, false),
+                new Column("primIntCol", INT32, false)
         };
 
         SchemaDescriptor schema = new SchemaDescriptor(1, cols, cols);
 
-        final Object key = WrongTestObject.randomObject(rnd);
-        final Object val = WrongTestObject.randomObject(rnd);
+        final Object key = TestObjectWithNoDefaultConstructor.randomObject(rnd);
+        final Object val = TestObjectWithNoDefaultConstructor.randomObject(rnd);
 
         assertThrows(IgniteInternalException.class, () -> factory.create(schema, key.getClass(), val.getClass()));
     }
 
     /**
-     *
+     * PrivateClass.
+     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
      */
     @ParameterizedTest
     @MethodSource("serializerFactoryProvider")
-    public void privateClass(SerializerFactory factory) throws SerializationException {
-        Column[] cols = new Column[] {
-            new Column("pLongCol", INT64, false),
+    public void privateClass(SerializerFactory factory) throws MarshallerException {
+        Column[] cols = new Column[]{
+                new Column("primLongCol", INT64, false),
         };
 
         SchemaDescriptor schema = new SchemaDescriptor(1, cols, cols);
@@ -295,33 +308,35 @@ public class JavaSerializerTest {
 
         final ObjectFactory<?> objFactory = new ObjectFactory<>(PrivateTestObject.class);
         final Serializer serializer = factory.create(schema, key.getClass(), val.getClass());
-        byte[] bytes = serializer.serialize(key, objFactory.create());
 
-        Object key1 = serializer.deserializeKey(bytes);
-        Object val1 = serializer.deserializeValue(bytes);
+        BinaryRow row = serializer.serialize(key, objFactory.create());
+
+        Object key1 = serializer.deserializeKey(new Row(schema, row));
+        Object val1 = serializer.deserializeValue(new Row(schema, row));
 
         assertTrue(key.getClass().isInstance(key1));
         assertTrue(val.getClass().isInstance(val1));
     }
 
     /**
-     *
+     * ClassLoader.
+     * TODO Documentation https://issues.apache.org/jira/browse/IGNITE-15859
      */
     @ParameterizedTest
     @MethodSource("serializerFactoryProvider")
-    public void classLoader(SerializerFactory factory) throws SerializationException {
+    public void classLoader(SerializerFactory factory) throws MarshallerException {
         final ClassLoader loader = Thread.currentThread().getContextClassLoader();
         try {
             Thread.currentThread().setContextClassLoader(new DynamicClassLoader(getClass().getClassLoader()));
 
-            Column[] keyCols = new Column[] {
-                new Column("key", INT64, false)
+            Column[] keyCols = new Column[]{
+                    new Column("key", INT64, false)
             };
 
-            Column[] valCols = new Column[] {
-                new Column("col0", INT64, false),
-                new Column("col1", INT64, false),
-                new Column("col2", INT64, false),
+            Column[] valCols = new Column[]{
+                    new Column("col0", INT64, false),
+                    new Column("col1", INT64, false),
+                    new Column("col2", INT64, false),
             };
 
             SchemaDescriptor schema = new SchemaDescriptor(1, keyCols, valCols);
@@ -333,44 +348,42 @@ public class JavaSerializerTest {
 
             Serializer serializer = factory.create(schema, key.getClass(), valClass);
 
-            byte[] bytes = serializer.serialize(key, objFactory.create());
+            BinaryRow row = serializer.serialize(key, objFactory.create());
 
-            Object key1 = serializer.deserializeKey(bytes);
-            Object val1 = serializer.deserializeValue(bytes);
+            Object key1 = serializer.deserializeKey(new Row(schema, row));
+            Object val1 = serializer.deserializeValue(new Row(schema, row));
 
             assertTrue(key.getClass().isInstance(key1));
             assertTrue(valClass.isInstance(val1));
-        }
-        finally {
+        } finally {
             Thread.currentThread().setContextClassLoader(loader);
         }
     }
 
     /**
-     * Generate random key-value pair of given types and
-     * check serialization and deserialization works fine.
+     * Generate random key-value pair of given types and check serialization and deserialization works fine.
      *
      * @param factory Serializer factory.
      * @param keyType Key type.
      * @param valType Value type.
-     * @throws SerializationException If (de)serialization failed.
+     * @throws MarshallerException If (de)serialization failed.
      */
     private void checkBasicType(SerializerFactory factory, NativeType keyType,
-        NativeType valType) throws SerializationException {
+                                NativeType valType) throws MarshallerException {
         final Object key = generateRandomValue(keyType);
         final Object val = generateRandomValue(valType);
 
-        Column[] keyCols = new Column[] {new Column("key", keyType, false)};
-        Column[] valCols = new Column[] {new Column("val", valType, false)};
+        Column[] keyCols = new Column[]{new Column("key", keyType, false)};
+        Column[] valCols = new Column[]{new Column("val", valType, false)};
 
         SchemaDescriptor schema = new SchemaDescriptor(1, keyCols, valCols);
 
         Serializer serializer = factory.create(schema, key.getClass(), val.getClass());
 
-        byte[] bytes = serializer.serialize(key, val);
+        BinaryRow row = serializer.serialize(key, val);
 
-        Object key1 = serializer.deserializeKey(bytes);
-        Object val1 = serializer.deserializeValue(bytes);
+        Object key1 = serializer.deserializeKey(new Row(schema, row));
+        Object val1 = serializer.deserializeValue(new Row(schema, row));
 
         assertTrue(key.getClass().isInstance(key1));
         assertTrue(val.getClass().isInstance(val1));
@@ -383,14 +396,15 @@ public class JavaSerializerTest {
      * Compare object regarding NativeType.
      *
      * @param type Native type.
-     * @param exp Expected value.
-     * @param act Actual value.
+     * @param exp  Expected value.
+     * @param act  Actual value.
      */
     private void compareObjects(NativeType type, Object exp, Object act) {
-        if (type.spec() == NativeTypeSpec.BYTES)
-            assertArrayEquals((byte[])exp, (byte[])act);
-        else
+        if (type.spec() == NativeTypeSpec.BYTES) {
+            assertArrayEquals((byte[]) exp, (byte[]) act);
+        } else {
             assertEquals(exp, act);
+        }
     }
 
     /**
@@ -399,7 +413,7 @@ public class JavaSerializerTest {
      * @param type Type.
      */
     private Object generateRandomValue(NativeType type) {
-        return TestUtils.generateRandomValue(rnd, type);
+        return SchemaTestUtils.generateRandomValue(rnd, type);
     }
 
     /**
@@ -413,235 +427,36 @@ public class JavaSerializerTest {
         final String className = "GeneratedTestObject";
 
         final ClassDefinition classDef = new ClassDefinition(
-            EnumSet.of(Access.PUBLIC),
-            packageName.replace('.', '/') + '/' + className,
-            ParameterizedType.type(Object.class)
+                EnumSet.of(Access.PUBLIC),
+                packageName.replace('.', '/') + '/' + className,
+                ParameterizedType.type(Object.class)
         );
         classDef.declareAnnotation(Generated.class).setValue("value", getClass().getCanonicalName());
 
-        for (int i = 0; i < 3; i++)
+        for (int i = 0; i < 3; i++) {
             classDef.declareField(EnumSet.of(Access.PRIVATE), "col" + i, ParameterizedType.type(fieldType));
+        }
 
-        { // Build constructor.
-            final MethodDefinition methodDef = classDef.declareConstructor(EnumSet.of(Access.PUBLIC));
-            final Variable rnd = methodDef.getScope().declareVariable(Random.class, "rnd");
+        // Build constructor.
+        final MethodDefinition methodDef = classDef.declareConstructor(EnumSet.of(Access.PUBLIC));
+        final Variable rnd = methodDef.getScope().declareVariable(Random.class, "rnd");
 
-            BytecodeBlock body = methodDef.getBody()
+        BytecodeBlock body = methodDef.getBody()
                 .append(methodDef.getThis())
                 .invokeConstructor(classDef.getSuperClass())
                 .append(rnd.set(BytecodeExpressions.newInstance(Random.class)));
 
-            for (int i = 0; i < 3; i++)
-                body.append(methodDef.getThis().setField("col" + i, rnd.invoke("nextLong", long.class).cast(fieldType)));
-
-            body.ret();
+        for (int i = 0; i < 3; i++) {
+            body.append(methodDef.getThis().setField("col" + i, rnd.invoke("nextLong", long.class).cast(fieldType)));
         }
+
+        body.ret();
 
         return ClassGenerator.classGenerator(Thread.currentThread().getContextClassLoader())
-            .fakeLineNumbers(true)
-            .runAsmVerifier(true)
-            .dumpRawBytecode(true)
-            .defineClass(classDef, Object.class);
-    }
-
-    /**
-     * Test object.
-     */
-    @SuppressWarnings("InstanceVariableMayNotBeInitialized")
-    public static class TestObject {
-        /**
-         * @return Random TestObject.
-         */
-        public static TestObject randomObject(Random rnd) {
-            final TestObject obj = new TestObject();
-
-            obj.pByteCol = (byte)rnd.nextInt(255);
-            obj.pShortCol = (short)rnd.nextInt(65535);
-            obj.pIntCol = rnd.nextInt();
-            obj.pLongCol = rnd.nextLong();
-            obj.pFloatCol = rnd.nextFloat();
-            obj.pDoubleCol = rnd.nextDouble();
-
-            obj.byteCol = (byte)rnd.nextInt(255);
-            obj.shortCol = (short)rnd.nextInt(65535);
-            obj.intCol = rnd.nextInt();
-            obj.longCol = rnd.nextLong();
-            obj.floatCol = rnd.nextFloat();
-            obj.doubleCol = rnd.nextDouble();
-            obj.nullLongCol = null;
-
-            obj.nullBytesCol = null;
-            obj.uuidCol = new UUID(rnd.nextLong(), rnd.nextLong());
-            obj.bitmaskCol = IgniteTestUtils.randomBitSet(rnd, 42);
-            obj.stringCol = IgniteTestUtils.randomString(rnd, rnd.nextInt(255));
-            obj.bytesCol = IgniteTestUtils.randomBytes(rnd, rnd.nextInt(255));
-            obj.numberCol = (BigInteger)TestUtils.generateRandomValue(rnd, NativeTypes.numberOf(12));
-            obj.decimalCol = (BigDecimal)TestUtils.generateRandomValue(rnd, NativeTypes.decimalOf(19, 3));
-
-            return obj;
-        }
-
-        // Primitive typed
-        private byte pByteCol;
-
-        private short pShortCol;
-
-        private int pIntCol;
-
-        private long pLongCol;
-
-        private float pFloatCol;
-
-        private double pDoubleCol;
-
-        // Reference typed
-        private Byte byteCol;
-
-        private Short shortCol;
-
-        private Integer intCol;
-
-        private Long longCol;
-
-        private Long nullLongCol;
-
-        private Float floatCol;
-
-        private Double doubleCol;
-
-        private UUID uuidCol;
-
-        private BitSet bitmaskCol;
-
-        private String stringCol;
-
-        private byte[] bytesCol;
-
-        private byte[] nullBytesCol;
-
-        private BigInteger numberCol;
-
-        private BigDecimal decimalCol;
-
-        /** {@inheritDoc} */
-        @Override public boolean equals(Object o) {
-            if (this == o)
-                return true;
-
-            if (o == null || getClass() != o.getClass())
-                return false;
-
-            TestObject object = (TestObject)o;
-
-            return pByteCol == object.pByteCol &&
-                pShortCol == object.pShortCol &&
-                pIntCol == object.pIntCol &&
-                pLongCol == object.pLongCol &&
-                Float.compare(object.pFloatCol, pFloatCol) == 0 &&
-                Double.compare(object.pDoubleCol, pDoubleCol) == 0 &&
-                Objects.equals(byteCol, object.byteCol) &&
-                Objects.equals(shortCol, object.shortCol) &&
-                Objects.equals(intCol, object.intCol) &&
-                Objects.equals(longCol, object.longCol) &&
-                Objects.equals(nullLongCol, object.nullLongCol) &&
-                Objects.equals(floatCol, object.floatCol) &&
-                Objects.equals(doubleCol, object.doubleCol) &&
-                Objects.equals(uuidCol, object.uuidCol) &&
-                Objects.equals(bitmaskCol, object.bitmaskCol) &&
-                Objects.equals(stringCol, object.stringCol) &&
-                Arrays.equals(bytesCol, object.bytesCol) &&
-                Objects.equals(numberCol, object.numberCol) &&
-                Objects.equals(decimalCol, object.decimalCol);
-        }
-
-        /** {@inheritDoc} */
-        @Override public int hashCode() {
-            return 73;
-        }
-    }
-
-    /**
-     * Test object with private constructor.
-     */
-    @SuppressWarnings("InstanceVariableMayNotBeInitialized")
-    public static class TestObjectWithPrivateConstructor {
-        /**
-         * @return Random TestObject.
-         */
-        static TestObjectWithPrivateConstructor randomObject(Random rnd) {
-            final TestObjectWithPrivateConstructor obj = new TestObjectWithPrivateConstructor();
-
-            obj.pLongCol = rnd.nextLong();
-
-            return obj;
-        }
-
-        /** Value. */
-        private long pLongCol;
-
-        /**
-         * Private constructor.
-         */
-        private TestObjectWithPrivateConstructor() {
-        }
-
-        /** {@inheritDoc} */
-        @Override public boolean equals(Object o) {
-            if (this == o)
-                return true;
-
-            if (o == null || getClass() != o.getClass())
-                return false;
-
-            TestObjectWithPrivateConstructor object = (TestObjectWithPrivateConstructor)o;
-
-            return pLongCol == object.pLongCol;
-        }
-
-        /** {@inheritDoc} */
-        @Override public int hashCode() {
-            return Objects.hash(pLongCol);
-        }
-    }
-
-    /**
-     * Test object without default constructor.
-     */
-    public static class WrongTestObject {
-        /**
-         * @return Random TestObject.
-         */
-        static WrongTestObject randomObject(Random rnd) {
-            return new WrongTestObject(rnd.nextLong());
-        }
-
-        /** Value. */
-        private final long pLongCol;
-
-        /**
-         * Private constructor.
-         */
-        public WrongTestObject(long val) {
-            pLongCol = val;
-        }
-
-        /** {@inheritDoc} */
-        @Override public boolean equals(Object o) {
-            if (this == o)
-                return true;
-
-            if (o == null || getClass() != o.getClass())
-                return false;
-
-            WrongTestObject object = (WrongTestObject)o;
-
-            return pLongCol == object.pLongCol;
-        }
-
-        /** {@inheritDoc} */
-        @Override public int hashCode() {
-            return Objects.hash(pLongCol);
-        }
+                .fakeLineNumbers(true)
+                .runAsmVerifier(true)
+                .dumpRawBytecode(true)
+                .defineClass(classDef, Object.class);
     }
 
     /**
@@ -650,14 +465,14 @@ public class JavaSerializerTest {
     @SuppressWarnings("InstanceVariableMayNotBeInitialized")
     private static class PrivateTestObject {
         /**
-         * @return Random TestObject.
+         * Get random TestObject.
          */
         static PrivateTestObject randomObject(Random rnd) {
             return new PrivateTestObject(rnd.nextInt());
         }
 
         /** Value. */
-        private long pLongCol;
+        private long primLongCol;
 
         /** Constructor. */
         PrivateTestObject() {
@@ -667,25 +482,29 @@ public class JavaSerializerTest {
          * Private constructor.
          */
         PrivateTestObject(long val) {
-            pLongCol = val;
+            primLongCol = val;
         }
 
         /** {@inheritDoc} */
-        @Override public boolean equals(Object o) {
-            if (this == o)
+        @Override
+        public boolean equals(Object o) {
+            if (this == o) {
                 return true;
+            }
 
-            if (o == null || getClass() != o.getClass())
+            if (o == null || getClass() != o.getClass()) {
                 return false;
+            }
 
-            WrongTestObject object = (WrongTestObject)o;
+            PrivateTestObject object = (PrivateTestObject) o;
 
-            return pLongCol == object.pLongCol;
+            return primLongCol == object.primLongCol;
         }
 
         /** {@inheritDoc} */
-        @Override public int hashCode() {
-            return Objects.hash(pLongCol);
+        @Override
+        public int hashCode() {
+            return Objects.hash(primLongCol);
         }
     }
 }
